# local-llm-workshop

./: .gitignore  README.md  docker-compose.yaml  main.py  practice.ipynb  pyproject.toml
