[project]
name = "local-llm-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "tabulate>=0.9.0",
    "torch>=2.10.0",
    "transformers>=4.57.6",
    "unsloth>=2026.1.4",
]

[tool.ruff]
extend-exclude = ["*.ipynb"]
